DotMac Kit 2.0 (Developer Preview 2)

--- a/.gitattributes
+++ b/.gitattributes
@@ -58,21 +58,6 @@ Download[!!-~]Automator[!!-~]Action/English.lproj/InfoPlist.strings svneol=nativ
 Spotlight[!!-~]Importer/English.lproj/InfoPlist.strings svneol=native#unset
 Spotlight[!!-~]Importer/English.lproj/schema.strings svneol=native#unset
 Upload[!!-~]Automator[!!-~]Action/English.lproj/InfoPlist.strings svneol=native#unset
-build/DotMacKit.framework/DotMacKit -text
-build/DotMacKit.framework/Resources/English.lproj/InfoPlist.strings -text
-build/DotMacKit.framework/Resources/English.lproj/locversion.plist -text
-build/DotMacKit.framework/Resources/Info.plist -text
-build/DotMacKit.framework/Resources/version.plist -text
-build/DotMacKit.framework/Versions/A/DotMacKit -text
-build/DotMacKit.framework/Versions/A/Resources/English.lproj/InfoPlist.strings -text
-build/DotMacKit.framework/Versions/A/Resources/English.lproj/locversion.plist -text
-build/DotMacKit.framework/Versions/A/Resources/Info.plist -text
-build/DotMacKit.framework/Versions/A/Resources/version.plist -text
-build/DotMacKit.framework/Versions/Current/DotMacKit -text
-build/DotMacKit.framework/Versions/Current/Resources/English.lproj/InfoPlist.strings -text
-build/DotMacKit.framework/Versions/Current/Resources/English.lproj/locversion.plist -text
-build/DotMacKit.framework/Versions/Current/Resources/Info.plist -text
-build/DotMacKit.framework/Versions/Current/Resources/version.plist -text
 ca.lproj/Alert.nib/classes.nib -text
 ca.lproj/Alert.nib/info.nib -text
 ca.lproj/Alert.nib/keyedobjects.nib -text
@@ -1064,6 +1049,22 @@ ko.lproj/Transfer.nib/classes.nib -text
 ko.lproj/Transfer.nib/info.nib -text
 ko.lproj/Transfer.nib/keyedobjects.nib -text
 ko.lproj/Transfer.strings -text svneol=unset#text/utf-16
+lib/DotMacKit.framework/DotMacKit -text
+lib/DotMacKit.framework/Headers -text
+lib/DotMacKit.framework/Resources -text
+lib/DotMacKit.framework/Versions/A/DotMacKit -text
+lib/DotMacKit.framework/Versions/A/Resources/DotMacKit-Info.plist -text
+lib/DotMacKit.framework/Versions/A/Resources/Entries -text
+lib/DotMacKit.framework/Versions/A/Resources/Info.plist -text
+lib/DotMacKit.framework/Versions/A/Resources/Repository -text
+lib/DotMacKit.framework/Versions/A/Resources/Root -text
+lib/DotMacKit.framework/Versions/A/Resources/version.plist -text
+lib/DotMacKit.framework/Versions/A/Support/.MacMessageManager.app/Contents/Frameworks/DotMacKit.framework -text
+lib/DotMacKit.framework/Versions/A/Support/.MacMessageManager.app/Contents/Info.plist -text
+lib/DotMacKit.framework/Versions/A/Support/.MacMessageManager.app/Contents/MacOS/.MacMessageManager -text
+lib/DotMacKit.framework/Versions/A/Support/.MacMessageManager.app/Contents/PkgInfo -text
+lib/DotMacKit.framework/Versions/A/Support/.MacMessageManager.app/Contents/version.plist -text
+lib/DotMacKit.framework/Versions/Current -text
 lib/Growl.framework/Growl -text
 lib/Growl.framework/Headers -text
 lib/Growl.framework/Resources -text
