New bookmark icon courtesy of Dietmar K.

--- a/.gitattributes
+++ b/.gitattributes
@@ -819,6 +819,7 @@ img/arrowUp.tiff -text svneol=unset#image/tiff
 img/arrowUpBlack.tiff -text svneol=unset#image/tiff
 img/arrowUpBlack16.tiff -text svneol=unset#image/tiff
 img/bandwidth.tiff -text svneol=unset#image/tiff
+img/bookmark.png -text svneol=unset#image/png
 img/bookmarks.tiff -text svneol=unset#image/tiff
 img/browser.tiff -text svneol=unset#image/tiff
 img/cancel.tiff -text svneol=unset#image/tiff
