--- a/.gitattributes
+++ b/.gitattributes
@@ -1235,6 +1235,7 @@ lib/Sparkle.framework/Versions/A/Resources/zh_TW.lproj/Sparkle.strings -text svn
 lib/Sparkle.framework/Versions/A/Sparkle -text
 lib/Sparkle.framework/Versions/Current -text
 lib/asm-3.2.jar -text
+lib/backport-util-concurrent-3.1.jar -text
 lib/cglib-2.2.jar -text
 lib/cloudfiles-1.5.0.jar -text
 lib/commons-codec-1.3.jar -text
