Add language image for preference pane

--- a/.gitattributes
+++ b/.gitattributes
@@ -848,6 +848,7 @@ img/general.tiff -text svneol=unset#image/tiff
 img/goto.tiff -text svneol=unset#image/tiff
 img/history.tiff -text svneol=unset#image/tiff
 img/info.tiff -text svneol=unset#image/tiff
+img/language.tiff -text
 img/list.tiff -text svneol=unset#image/tiff
 img/locked.tiff -text svneol=unset#image/tiff
 img/login.tiff -text svneol=unset#image/tiff
