--- a/.gitattributes
+++ b/.gitattributes
@@ -1777,6 +1777,85 @@ sk.lproj/Prompt.strings -text svneol=unset#text/utf-16
 sk.lproj/S3.strings -text svneol=unset#text/utf-16
 sk.lproj/Status.strings -text svneol=unset#text/utf-16
 sk.lproj/Transfer.strings -text svneol=unset#text/utf-16
+sl.lproj/Alert.nib/classes.nib -text
+sl.lproj/Alert.nib/info.nib -text
+sl.lproj/Alert.nib/keyedobjects.nib -text
+sl.lproj/Alert.strings -text svneol=unset#text/utf-16
+sl.lproj/Archive.strings -text svneol=unset#text/utf-16
+sl.lproj/Bookmark.nib/classes.nib -text
+sl.lproj/Bookmark.nib/info.nib -text
+sl.lproj/Bookmark.nib/keyedobjects.nib -text
+sl.lproj/Bookmark.strings -text svneol=unset#text/utf-16
+sl.lproj/Browser.nib/classes.nib -text
+sl.lproj/Browser.nib/info.nib -text
+sl.lproj/Browser.nib/keyedobjects.nib -text
+sl.lproj/Browser.strings -text svneol=unset#text/utf-16
+sl.lproj/Command.nib/classes.nib -text
+sl.lproj/Command.nib/info.nib -text
+sl.lproj/Command.nib/keyedobjects.nib -text
+sl.lproj/Command.strings -text svneol=unset#text/utf-16
+sl.lproj/Configuration.strings -text svneol=unset#text/utf-16
+sl.lproj/Connection.nib/classes.nib -text
+sl.lproj/Connection.nib/info.nib -text
+sl.lproj/Connection.nib/keyedobjects.nib -text
+sl.lproj/Connection.strings -text svneol=unset#text/utf-16
+sl.lproj/Crash.strings -text svneol=unset#text/utf-16
+sl.lproj/Credentials.strings -text svneol=unset#text/utf-16
+sl.lproj/Donate.nib/classes.nib -text
+sl.lproj/Donate.nib/info.nib -text
+sl.lproj/Donate.nib/keyedobjects.nib -text
+sl.lproj/Donate.strings -text svneol=unset#text/utf-16
+sl.lproj/Download.nib/classes.nib -text
+sl.lproj/Download.nib/info.nib -text
+sl.lproj/Download.nib/keyedobjects.nib -text
+sl.lproj/Download.strings -text svneol=unset#text/utf-16
+sl.lproj/Duplicate.nib/classes.nib -text
+sl.lproj/Duplicate.nib/info.nib -text
+sl.lproj/Duplicate.nib/keyedobjects.nib -text
+sl.lproj/Duplicate.strings -text svneol=unset#text/utf-16
+sl.lproj/Error.strings -text svneol=unset#text/utf-16
+sl.lproj/File.nib/classes.nib -text
+sl.lproj/File.nib/info.nib -text
+sl.lproj/File.nib/keyedobjects.nib -text
+sl.lproj/File.strings -text svneol=unset#text/utf-16
+sl.lproj/Folder.nib/classes.nib -text
+sl.lproj/Folder.nib/info.nib -text
+sl.lproj/Folder.nib/keyedobjects.nib -text
+sl.lproj/Folder.strings -text svneol=unset#text/utf-16
+sl.lproj/Goto.nib/classes.nib -text
+sl.lproj/Goto.nib/info.nib -text
+sl.lproj/Goto.nib/keyedobjects.nib -text
+sl.lproj/Goto.strings -text svneol=unset#text/utf-16
+sl.lproj/Growl.strings -text svneol=unset#text/utf-16
+sl.lproj/IDisk.strings -text svneol=unset#text/utf-16
+sl.lproj/Info.nib/classes.nib -text
+sl.lproj/Info.nib/info.nib -text
+sl.lproj/Info.nib/keyedobjects.nib -text
+sl.lproj/Info.strings -text svneol=unset#text/utf-16
+sl.lproj/InfoPlist.strings -text svneol=unset#text/utf-16
+sl.lproj/Keychain.strings -text svneol=unset#text/utf-16
+sl.lproj/License.strings -text svneol=unset#text/utf-16
+sl.lproj/Localizable.strings -text svneol=unset#text/utf-16
+sl.lproj/Login.nib/classes.nib -text
+sl.lproj/Login.nib/info.nib -text
+sl.lproj/Login.nib/keyedobjects.nib -text
+sl.lproj/Login.strings -text svneol=unset#text/utf-16
+sl.lproj/Main.nib/classes.nib -text
+sl.lproj/Main.nib/info.nib -text
+sl.lproj/Main.nib/keyedobjects.nib -text
+sl.lproj/Main.strings -text svneol=unset#text/utf-16
+sl.lproj/Mosso.strings -text svneol=unset#text/utf-16
+sl.lproj/Preferences.nib/classes.nib -text
+sl.lproj/Preferences.nib/info.nib -text
+sl.lproj/Preferences.nib/keyedobjects.nib -text
+sl.lproj/Preferences.strings -text svneol=unset#text/utf-16
+sl.lproj/Prompt.nib/classes.nib -text
+sl.lproj/Prompt.nib/info.nib -text
+sl.lproj/Prompt.nib/keyedobjects.nib -text
+sl.lproj/Prompt.strings -text svneol=unset#text/utf-16
+sl.lproj/S3.strings -text svneol=unset#text/utf-16
+sl.lproj/Status.strings -text svneol=unset#text/utf-16
+sl.lproj/Transfer.strings -text svneol=unset#text/utf-16
 source/ch/cyberduck/core/AbstractLoginController.java -text
 source/ch/cyberduck/core/CollectionListener.java -text
 source/ch/cyberduck/core/HistoryCollection.java -text
