--- a/.gitattributes
+++ b/.gitattributes
@@ -1287,6 +1287,8 @@ lib/gdata-core-1.0.jar -text
 lib/gdata-docs-3.0.jar -text
 lib/gdata-docs-meta-3.0.jar -text
 lib/gdata-media-1.0.jar -text
+lib/gdata-spreadsheet-3.0.jar -text
+lib/gdata-spreadsheet-meta-3.0.jar -text
 lib/google-collect-1.0.jar -text
 lib/icu4j-3.6.1.jar -text
 lib/jakarta-oro-2.0.8.jar -text
